--- a/Python/IonLaserPlot.ipynb
+++ b/Python/IonLaserPlot.ipynb
@@ -14,25 +14,6 @@
     "from matplotlib import ticker\n",
     "plt.rcParams['ytick.right']  =plt.rcParams['xtick.top'] =True\n",
     "xminorLocator=MultipleLocator(2)\n",
-    "#plt.rcParams['set_minor_locator']=xminorLocator\n",
-    "# plt.rcParams.update({\n",
-    "#     \"text.usetex\": True,\n",
-    "#     \"font.family\": \"sans-serif\",\n",
-    "#     \"font.sans-serif\": [\"Time New Rroman\"]})\n",
-    "# # for Palatino and other serif fonts use:\n",
-    "# plt.rcParams.update({\n",
-    "#     \"text.usetex\": True,\n",
-    "#     \"font.family\": \"serif\",\n",
-    "#     #\"font.serif\": [\"Palatino\"],\n",
-    "#     \"font.serif\": [\"Time New Roman\"], \n",
-    "# })\n",
-    "# # It's also possible to use the reduced notation by directly setting font.family:\n",
-    "# plt.rcParams.update({\n",
-    "#   \"text.usetex\": True,\n",
-    "#   \"font.family\": \"Time New Roman\",\n",
-    "#   \"font.size\": 8,\n",
-    "# })\n",
-    "\n",
     "\n",
     "def cm2inch(value):\n",
     "    return value/2.54\n",
@@ -65,12 +46,7 @@
     "    if legend:\n",
     "        ax.add_artist(legend)\n",
     "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label,fillstyle='full')\n",
-    "    # legend_font = {\n",
-    "    # 'family': 'Times New Roman',\n",
-    "    # 'style':'normal',\n",
-    "    # 'size':10,\n",
-    "    # 'weight': \"bold\",\n",
-    "    # }\n",
+    "\n",
     "    label_legend = ax.legend(handles=[line],\n",
     "                             loc=[-0.2,1.0005],\n",
     "                             handlelength=0.0,\n",
@@ -114,16 +90,117 @@
     "formatsci=ticker.ScalarFormatter(useMathText=True)\n",
     "formatsci.set_scientific(True)\n",
     "formatsci.set_powerlimits((-1,1))\n",
+    "def sciforyax(ax):\n",
+    "    formatter=ticker.ScalarFormatter(useMathText=True)\n",
+    "    formatter.set_scientific(True)\n",
+    "    formatter.set_powerlimits((0,0))\n",
+    "    ax.yaxis.set_major_formatter(formatter)\n",
+    "def sciforxax(ax):\n",
+    "    formatter=ticker.ScalarFormatter(useMathText=True)\n",
+    "    formatter.set_scientific(True)\n",
+    "    formatter.set_powerlimits((0,0))\n",
+    "    ax.xaxis.set_major_formatter(formatter)\n",
+    "    \n",
+    "cbformat=ticker.ScalarFormatter(useMathText=True,useOffset=True)\n",
+    "cbformat.set_powerlimits((-0,0))\n",
+    "cbformat.format=\"%.2f\"    \n",
+    "\n",
     "levels=100\n",
     "figureDPI=1200\n",
     "figureType=\"jpeg\"\n",
     "timeUnit=\"fs\"\n",
-    "dir='D:\\\\doc\\\\data\\\\pulses\\\\PiJump\\\\'\n",
+    "# dir='D:\\\\doc\\\\data\\\\pulses\\\\squeue\\\\'\n",
+    "dir='D:\\\\dataofpro\\\\'\n",
+    "name='squeue'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
-    "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
-    "print(f.read(1500))\n",
-    "outdir=dir"
+    "# f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
+    "# print(f.read(1500))\n",
+    "outdir='D:\\\\doc\\\\data\\\\pulses\\\\'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.ticker as mtick\n",
+    "\n",
+    "plt.figure(figsize=(cm2inch(16),cm2inch(13)))\n",
+    "\n",
+    "ax=plt.axes([0.1,0.55,0.4,0.4])\n",
+    "setlabel(ax,\"(a)\")\n",
+    "data=np.loadtxt(dir+\"TimFreDis1.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar(format=cbformat)\n",
+    "# plt.colorbar(pad= 0.05)\n",
+    "plt.xlabel(\"Time(fs)\")\n",
+    "plt.ylabel(\"Frequency (a.u.)\")\n",
+    "sciformat(ax)\n",
+    "\n",
+    "\n",
+    "ax=plt.axes([0.6,0.55,0.32,0.4])\n",
+    "setlabel(ax,\"(b)\")\n",
+    "data=np.loadtxt(dir+\"populationofstate.dat\")\n",
+    "t=data[:,0]\n",
+    "p1=data[:,1]\n",
+    "p2=data[:,2]\n",
+    "p3=data[:,3]\n",
+    "plt.plot(t,p1,'k-',t,p2,'r--',t,p3,'b-.')\n",
+    "sciformat(ax)\n",
+    "plt.xlim(min(t),max(t))\n",
+    "plt.xlabel(\"Time(fs)\")\n",
+    "plt.ylabel(\"Population\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "ax=plt.axes([0.1,0.07,0.4,0.4])\n",
+    "setlabel(ax,\"(c)\")\n",
+    "data=np.loadtxt(dir+\"ExcRadWave.dat\")\n",
+    "t=data[:,0]\n",
+    "r=data[:,1]\n",
+    "p=data[:,2]\n",
+    "plt.tricontourf(t,r,p,100,cmap='jet')\n",
+    "plt.colorbar(format=cbformat)\n",
+    "plt.ylim(min(r),10.0)\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\")\n",
+    "\n",
+    "ax=plt.axes([0.6,0.07,0.4,0.4])\n",
+    "setlabel(ax,\"(d)\")\n",
+    "from matplotlib.ticker import MaxNLocator\n",
+    "DataPop =np.loadtxt(dir+\"p_exc_vj\\\\p_vj_at_pos000025_fs.dat\")\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=DataPop[:,0]\n",
+    "y=DataPop[:,1]\n",
+    "z=DataPop[:,2]\n",
+    "ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
+    "nx=int((max(x)-min(x))/(x[ny]-x[0]))+1+1\n",
+    "zMesh=np.zeros((ny,nx))\n",
+    "for i in range(1,nx):\n",
+    "    for j in range(1,ny):\n",
+    "        zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
+    "xMesh=np.linspace(min(x),max(x),nx)\n",
+    "yMesh=np.linspace(min(y),max(y),ny)\n",
+    "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
+    "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
+    "ax.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "plt.xlim(-0.5,25.5)\n",
+    "plt.ylim(-0.5,5.5)\n",
+    "plt.xlabel('$V$')\n",
+    "plt.ylabel('$J$')\n",
+    "plt.colorbar(format=cbformat)\n",
+    "plt.title('$t = 25 $ fs',loc='left')\n",
+    "\n",
+    "\n",
+    "plt.savefig(outdir+name+\"LasPopWav.\"+figureType,dpi=figureDPI)\n",
+    "# os.startfile(dir)\n",
+    "os.startfile(outdir+name+\"LasPopWav.\"+figureType)"
    ]
   },
   {
@@ -248,8 +325,11 @@
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
+    "zmax=max(z)\n",
+    "z1=z/zmax\n",
     "np.savetxt(dir+\"TFD\"+name+\".dat\",data)\n",
-    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.tricontourf(x,y,z1,levels,cmap='jet')\n",
+    "plt.colorbar(format=\"%.1f\")\n",
     "# plt.colorbar(pad= 0.05)\n",
     "plt.xlabel(\"Time(fs)\")\n",
     "plt.ylabel(\"Frequency (a.u.)\")\n",
@@ -656,11 +736,40 @@
     "# ax=plt.subplot(gs[3,2])\n",
     "# ax=plt.subplot(gs[3,3])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=np.loadtxt(dir+\"PotentialEnergy.dat\")\n",
+    "r=data[:,0]\n",
+    "p1=data[:,1]\n",
+    "p2=data[:,2]\n",
+    "p3=data[:,3]\n",
+    "p=p3-p1\n",
+    "plt.plot(r,p)\n",
+    "plt.plot(r,p1,r,p2,r,p3)\n",
+    "plt.plot(r,p3-p2)\n",
+    "rp=np.ndarray(shape=(len(r),2))\n",
+    "for i in range(0,len(r)):\n",
+    "    rp[i,0]=r[i]\n",
+    "    rp[i,1]=(p3[i]-p2[i])\n",
+    "np.savetxt(dir+'dpot.dat',rp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
