--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -126,7 +126,7 @@
     "figureDPI=1200\n",
     "figureType=\"jpeg\"\n",
     "timeUnit=\"fs\"\n",
-    "dir='D:\\\\doc\\\\data\\\\ion\\\\'\n",
+    "dir='D:\\\\doc\\\\latex\\\\中期\\\\'\n",
     "# os.mkdir('D:\\\\doc\\\\data\\\\ion\\\\data')\n",
     "# os.mkdir('D:\\\\doc\\\\data\\\\ion\\\\picture')"
    ]
@@ -170,12 +170,12 @@
     "plt.xlim(1.75,11)\n",
     "plt.legend([\"$\\\\mu_{XX} $\",\"$\\\\mu_{AA} $\",\"$\\\\mu_{XA} $\"],loc=(0.75,0.08))\n",
     "# plt.tight_layout()\n",
-    "plt.subplots_adjust(left=0.1,\n",
-    "                    bottom=0.1, \n",
-    "                    right=0.9, \n",
-    "                    top=0.9, \n",
-    "                    wspace=0.3, \n",
-    "                    hspace=0.3)\n",
+    "# plt.subplots_adjust(left=0.1,\n",
+    "#                     bottom=0.1, \n",
+    "#                     right=0.9, \n",
+    "#                     top=0.9, \n",
+    "#                     wspace=0.3, \n",
+    "#                     hspace=0.3)\n",
     "#plt.savefig(dir+\"PotentialEnergyAndDipoleMent.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
     "plt.savefig(dir+\"picture\\\\f1potDip.\"+figureType,dpi=figureDPI)#bbox_inches=\"tight\",,transparent=True\n",
     "plt.show()"
@@ -2126,7 +2126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
