--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -20,6 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dir='D:\\\\dataofpro\\\\'\n",
+    "print('Working directory',dir)\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
@@ -182,8 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\fc8\\\\'\n",
-    "print('Working directory',dir)\n",
+    "\n",
     "print(\"\\n\")\n",
     "if fee(dir+\"alog.dat\"):\n",
     "    print(fee)\n",
@@ -256,9 +257,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if os.path.exists(dir+\"popu.dat\"):\n",
+    "if fee(dir+\"popu.dat\"):\n",
     "    data=np.loadtxt(dir+\"Popu.dat\")\n",
-    "elif os.path.exists(dir+\"PopulationOfState.dat\"):\n",
+    "elif fee(dir+\"PopulationOfState.dat\"):\n",
     "    data = np.loadtxt(dir+\"PopulationOfState.dat\")\n",
     "else:\n",
     "    print(\"No PopulationOfState dataset found.\")\n",
@@ -307,11 +308,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=((8*2/2.54),(6.5*2/2.54)))\n",
+    "\n",
     "file=dir+'Laser.dat'\n",
-    "if(os.path.getsize(file) == 0):\n",
-    "    print(\"The file is empty\")\n",
-    "else:\n",
+    "if fee(file):\n",
+    "    plt.figure(figsize=((8*2/2.54),(6.5*2/2.54)))\n",
     "    data=np.loadtxt(dir+\"Laser.dat\")\n",
     "    x =data[:,0]\n",
     "    y1=data[:,1]\n",
@@ -478,11 +478,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.ticker as ticker\n",
-    "plt.figure(figsize=(16/2.54,13/2.54))\n",
+    "\n",
     "file=dir+'vgr_ang.dat'\n",
     "if fee(file):\n",
-    "    \n",
+    "    import matplotlib.ticker as ticker\n",
+    "    plt.figure(figsize=(16/2.54,13/2.54))\n",
     "    plt.subplot(2,2,1)\n",
     "    DataAng =np.loadtxt(dir+\"vgr_ang.dat\")\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
@@ -537,6 +537,8 @@
     "    plt.ylabel(\"$\\\\theta$ $(\\\\pi)$\")\n",
     "file=dir+'GroAngWave.dat'\n",
     "if fee(file):\n",
+    "    import matplotlib.ticker as ticker\n",
+    "    plt.figure(figsize=(16/2.54,13/2.54))\n",
     "    ax=plt.subplot(2,2,1)\n",
     "    data =np.loadtxt(dir+\"GroAngWave.dat\")\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
@@ -613,9 +615,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=((16/2.54),(13/2.54)))\n",
-    "import matplotlib.ticker as ticker\n",
-    "if fee(dir+\"vgr_rad.dat\"):     \n",
+    "\n",
+    "if fee(dir+\"vgr_rad.dat\"): \n",
+    "    plt.figure(figsize=((16/2.54),(13/2.54)))\n",
+    "    import matplotlib.ticker as ticker    \n",
     "    ax=plt.subplot(2,2,1)\n",
     "    DataAng =np.loadtxt(dir+\"vgr_rad.dat\")\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
@@ -685,6 +688,7 @@
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
     "if fee(dir+\"GroRadWave.dat\"):\n",
+    "    plt.figure(figsize=((16/2.54),(13/2.54)))\n",
     "    ax=plt.subplot(2,2,1)\n",
     "    DataAng =np.loadtxt(dir+\"GroRadWave.dat\")\n",
     "    #plt.style.use('_mpl-gallery-nogrid')\n",
@@ -775,10 +779,7 @@
     "    plt.ylim(min(y),10)\n",
     "    #FC \n",
     "\n",
-    "\n",
-    "\n",
     "    ax=plt.axes([0.55,0.55,0.35,0.17])\n",
-    "\n",
     "    data=np.loadtxt(intDir+\"FcRad.dat\")\n",
     "    x=data[:,0]\n",
     "    y=data[:,1]\n",
@@ -1886,7 +1887,7 @@
    "source": [
     "if fee(dir+\"FCrad.dat\"):\n",
     "    plt.figure(figsize=(8/2.54,13/2.54))\n",
-    "    data=np.loadtxt(dir+\"FCrad.dat\")\n",
+    "    data=np.loadtxt(dir+\"FCerad.dat\")\n",
     "    x=data[:,0]\n",
     "    y=data[:,1]\n",
     "    z1=data[:,2]\n",
@@ -1925,7 +1926,7 @@
    "source": [
     "if fee(dir+\"FCang.dat\"):\n",
     "    plt.figure(figsize=(8/2.54,13/2.54))\n",
-    "    data=np.loadtxt(dir+\"FCang.dat\")\n",
+    "    data=np.loadtxt(dir+\"FCeang.dat\")\n",
     "    x=data[:,0]\n",
     "    y=data[:,1]/180\n",
     "    z1=data[:,2]\n",
@@ -1953,6 +1954,15 @@
     "                        hspace=0.2)\n",
     "    plt.savefig(dir+\"RCAng.\"+figureType,bbox_inches = 'tight',transparent=True,dpi=figureDPI)\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop"
    ]
   },
   {
