--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -961,7 +961,7 @@
     "#FC \n",
     "ax=plt.axes([0.55,0.55,0.35,0.35])\n",
     "setlabelm(ax,'(b)',[-0.2,1.02])\n",
-    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\fc3\\\\FCrad.dat')\n",
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\fc\\\\fc3\\\\FCrad.dat')\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,3]\n",
@@ -1058,7 +1058,7 @@
     "#FC \n",
     "ax=plt.axes([0.55,0.55,0.35,0.35])\n",
     "setlabelm(ax,'(b)',[-0.2,1.02])\n",
-    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\fc3\\\\FCrad.dat')\n",
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\fc\\\\fc3\\\\FCrad.dat')\n",
     "\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
@@ -2126,7 +2126,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
