--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\dataofpro\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\exctoion\\\\t1\\\\'\n",
     "print('Working directory',dir)\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -2280,7 +2280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
