--- a/Python/oriplot.ipynb
+++ b/Python/oriplot.ipynb
@@ -122,17 +122,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datanew=np.loadtxt('C:\\\\Users\\\\DELL\\\\OneDrive - mail.dlut.edu.cn\\\\program\\\\origin program for orientation\\originoforient\\\\LiHGroundState.txt')\n",
-    "dataold=np.loadtxt('C:\\\\Users\\\\DELL\\\\OneDrive - mail.dlut.edu.cn\\\\program\\\\origin program for orientation\\originoforient\\\\pesco.txt')\n",
-    "x1=datanew[:,0]\n",
-    "y1=datanew[:,1]\n",
-    "x2=dataold[:,0]\n",
-    "y2=dataold[:,1]\n",
-    "plt.plot(x1,y1,x2,y2)\n",
-    "plt.xlim(min(x1),10.0)\n",
-    "plt.ylim(min(y1),-7.9)\n",
-    "plt.savefig('D:\\\\LiHGroundState.jpeg',dpi=1200)\n",
-    "os.startfile('D:\\\\LiHGroundState.jpeg')\n",
+    "# datanew=np.loadtxt('C:\\\\Users\\\\DELL\\\\OneDrive - mail.dlut.edu.cn\\\\program\\\\origin program for orientation\\originoforient\\\\LiHGroundState.txt')\n",
+    "# dataold=np.loadtxt('C:\\\\Users\\\\DELL\\\\OneDrive - mail.dlut.edu.cn\\\\program\\\\origin program for orientation\\originoforient\\\\pesco.txt')\n",
+    "# x1=datanew[:,0]\n",
+    "# y1=datanew[:,1]\n",
+    "# x2=dataold[:,0]\n",
+    "# y2=dataold[:,1]\n",
+    "# plt.plot(x1,y1,x2,y2)\n",
+    "# plt.xlim(min(x1),10.0)\n",
+    "# plt.ylim(min(y1),-7.9)\n",
+    "# plt.savefig('D:\\\\LiHGroundState.jpeg',dpi=1200)\n",
+    "# os.startfile('D:\\\\LiHGroundState.jpeg')\n",
     "\n"
    ]
   },
@@ -144,8 +144,9 @@
    "source": [
     "# dir='D:\\\\doc\\\\data\\\\ori\\\\test2\\\\'\n",
     "dir='D:\\\\dataofpro\\\\'\n",
-    "dir=\"F:\\\\doc\\\\ori1\\\\oneHCP\\\\wave\\\\ori1\\\\\"\n",
-    "dir='F:\\\\doc\\\\ori1\\\\twoHCP\\\\two_oppsite_HCP\\\\225\\\\'\n",
+    "# dir=\"F:\\\\doc\\\\ori1\\\\oneHCP\\\\wave\\\\ori1\\\\\"\n",
+    "# dir='F:\\\\doc\\\\ori1\\\\twoHCP\\\\two_oppsite_HCP\\\\225\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ori\\\\pulse\\\\sqp\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -259,6 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(8,6))\n",
     "data=np.loadtxt(dir+\"laser.dat\")\n",
     "x=data[:,0]\n",
     "y1=data[:,1]\n",
@@ -269,13 +271,13 @@
     "#plt.grid(False)\n",
     "plt.xlabel('Time (fs)')\n",
     "plt.ylabel(\"Intensity (V/m)\")\n",
-    "plt.xlim(TimeBegin, TimeEnd)\n",
+    "# plt.xlim(TimeBegin, TimeEnd)\n",
+    "# plt.xlim(-10,2100)\n",
     "sciforyax(ax)\n",
-    "plt.plot(x,y1,'k-')#,x,y2,'b--',x,y4,'r-.')#,x,y2,'r-')\n",
+    "plt.plot(x,y1,'k-',x,y4,'r-.',x,-y4,'r-.')#,x,y2,'b--',x,y4,'r-.')#,x,y2,'r-')\n",
     "#plt.legend([\"First\", \"Second\"],loc=(0.75,0.7))\n",
     "plt.savefig(dir+\"LaserFiled.jpeg\",bbox_inches = 'tight',transparent=True,dpi=600)\n",
-    "plt.show()\n",
-    "os.startfile(dir)"
+    "plt.show()"
    ]
   },
   {
@@ -398,13 +400,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "data=np.loadtxt(dir+\"popu1.dat\")\n",
     "plt.xlim(TimeBegin,TimeEnd)\n",
@@ -453,79 +448,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax1=plt.subplot(1,2,1)\n",
-    "    setlabel(ax1,\"(a)\")\n",
-    "    DataPop =np.loadtxt(s1[ii])\n",
-    "    #plt.style.use('_mpl-gallery-nogrid')\n",
-    "    x=DataPop[:,0]\n",
-    "    y=DataPop[:,1]\n",
-    "    z=DataPop[:,2]\n",
-    "    ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
-    "    nx=int((max(x)-min(x))/(x[ny]-x[0]))+1\n",
-    "    zMesh=np.zeros((ny,nx))\n",
-    "    for i in range(1,nx):\n",
-    "        for j in range(1,ny):\n",
-    "            zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
-    "    # print('nx= ',nx,' ny= ',ny)\n",
-    "    # print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
-    "    # print('x[50]',x[50])\n",
-    "    # print(x[0])\n",
-    "    # print(zMesh)\n",
-    "    xMesh=np.linspace(min(x),max(x),nx)\n",
-    "    yMesh=np.linspace(min(y),max(y),ny)\n",
-    "    #xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
-    "    plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
-    "    ax1.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
-    "    ax1.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
-    "    plt.xlim(-0.5,19.5)\n",
-    "    plt.ylim(-0.5,19.5)\n",
-    "    plt.xlabel('$V$')\n",
-    "    plt.ylabel('$J$')\n",
-    "    plt.title(\"Ground state, $t$ = \"+fileList[ii][11:17]+\" fs\",loc='left')\n",
-    "    plt.colorbar(format=cbformat)\n",
-    "    ax2=plt.subplot(1,2,2)\n",
-    "    setlabel(ax2,\"(b)\")\n",
-    "    DataPop =np.loadtxt(s2[ii])\n",
-    "    #plt.style.use('_mpl-gallery-nogrid')\n",
-    "    x=DataPop[:,0]\n",
-    "    y=DataPop[:,1]\n",
-    "    z=DataPop[:,2]\n",
-    "    ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
-    "    nx=int((max(x)-min(x))/(x[ny]-x[0]))+1\n",
-    "    zMesh=np.zeros((ny,nx))\n",
-    "    for i in range(1,nx):\n",
-    "        for j in range(1,ny):\n",
-    "            zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
-    "    # print('nx= ',nx,' ny= ',ny)\n",
-    "    # print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
-    "    # print('x[50]',x[50])\n",
-    "    # print(x[0])\n",
-    "    # print(zMesh)\n",
-    "    xMesh=np.linspace(min(x),max(x),nx)\n",
-    "    yMesh=np.linspace(min(y),max(y),ny)\n",
-    "    #xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
-    "    plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
-    "    ax2.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
-    "    ax2.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
-    "    plt.title(\"Excited state, $t$ = \"+fileList[ii][11:17]+\" fs\",loc='left')\n",
-    "    plt.xlabel('$V$')\n",
-    "    plt.ylabel('$J$')\n",
-    "    plt.xlim(-0.5,19.5)\n",
-    "    plt.ylim(-0.5,19.5)\n",
-    "    plt.colorbar(format=cbformat)\n",
-    "    plt.subplots_adjust(left=0.125,\n",
-    "                        bottom=0.1, \n",
-    "                        right=0.9, \n",
-    "                        top=0.9, \n",
-    "                        wspace=0.25, \n",
-    "                        hspace=0.2)\n",
-    "    plt.savefig(dir+\"p_vgr_vj\\\\\"+fileList[ii][:17]+\".\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+    "plt.figure(figsize=((16/2.54),(13/2.54)))\n",
+    "from matplotlib.ticker import MaxNLocator\n",
+    "#timeP=\"20\"\n",
+    "fileList1 =os.listdir(dir+\"p_vj\\\\\")\n",
+    "filelist1=list()\n",
+    "s1=list()\n",
+    "print(\"Checking image list\")\n",
+    "n=len(fileList1)\n",
+    "if n:\n",
+    "    for i in range(n):\n",
+    "        s=dir+\"p_vj\\\\\"+str(fileList1[i])\n",
+    "        if s[-4:]==\".dat\":\n",
+    "            s1.append(s)\n",
+    "    n=len(s1)\n",
+    "    for ii in range(n):\n",
+    "        ax1=plt.gca()\n",
+    "        DataPop =np.loadtxt(s1[ii])\n",
+    "        #plt.style.use('_mpl-gallery-nogrid')\n",
+    "        x=DataPop[:,0]\n",
+    "        y=DataPop[:,1]\n",
+    "        z=DataPop[:,2]\n",
+    "        ny=int((max(y)-min(y))/(y[2]-y[1]))+1\n",
+    "        nx=int((max(x)-min(x))/(x[ny]-x[0]))+1\n",
+    "        zMesh=np.zeros((ny,nx))\n",
+    "        for i in range(1,nx):\n",
+    "            for j in range(1,ny):\n",
+    "                zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
+    "        # print('nx= ',nx,' ny= ',ny)\n",
+    "        # print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
+    "        # print('x[50]',x[50])\n",
+    "        # print(x[0])\n",
+    "        # print(zMesh)\n",
+    "        xMesh=np.linspace(min(x),max(x),nx)\n",
+    "        yMesh=np.linspace(min(y),max(y),ny)\n",
+    "        #xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
+    "        plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet',vmin=0.0,vmax=1.0)\n",
+    "        ax1.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "        ax1.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "        plt.xlim(-0.5,19.5)\n",
+    "        plt.ylim(-0.5,19.5)\n",
+    "        plt.xlabel('$V$')\n",
+    "        plt.ylabel('$J$')\n",
+    "        plt.title(\"Ground state, $t$ = \"+fileList1[ii][11:17]+\" fs\",loc='left')\n",
+    "        plt.colorbar(format=cbformat)\n",
+    "        plt.savefig(dir+\"p_vj\\\\\"+fileList1[ii][:17]+\".\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "        plt.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "fileList =os.listdir(dir+\"p_vj\\\\\")\n",
+    "# print(fileList)\n",
+    "image_list=list()\n",
+    "# print(\"Checking image list\")\n",
+    "n=len(fileList)\n",
+    "for i in range(n):\n",
+    "    s=dir+\"p_vj\\\\\"+str(fileList[i])\n",
+    "    if s[-5:]==\".jpeg\":\n",
+    "        image_list.append(s)\n",
+    "n=len(image_list)\n",
+    "import  imageio\n",
+    "import os\n",
+    "def compose_gif(image_list,gif_name,myduration):\n",
+    "    frames=[]\n",
+    "    for image_name in image_list:\n",
+    "        frames.append(imageio.imread(image_name))\n",
+    "    imageio.mimsave(gif_name,frames,'GIF',duration=myduration)\n",
+    "    return\n",
+    "if n:   \n",
+    "    gif_name = \"P_VJ.gif\"# print(image_list)\n",
+    "    myduration=0.3#eval(input(\"duration: s\"))\n",
+    "    compose_gif(image_list,dir+gif_name,myduration)\n",
+    "    print(\"Created\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -539,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
