--- a/Python/FigureForTwoPump.ipynb
+++ b/Python/FigureForTwoPump.ipynb
@@ -198,7 +198,7 @@
     "plt.colorbar()\n",
     "# plt.xlim(min(x),5000)\n",
     "plt.xlabel(\"Time (fs)\")\n",
-    "plt.ylabel(\"$\\\\theta$ ($\\\\pi$)\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\")\n",
     "plt.subplots_adjust(left=0.125,\n",
     "                    bottom=0.1, \n",
     "                    right=0.9, \n",
@@ -1560,7 +1560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
