--- a/Python/oriplot.ipynb
+++ b/Python/oriplot.ipynb
@@ -146,7 +146,7 @@
     "dir='D:\\\\dataofpro\\\\'\n",
     "# dir=\"F:\\\\doc\\\\ori1\\\\oneHCP\\\\wave\\\\ori1\\\\\"\n",
     "# dir='F:\\\\doc\\\\ori1\\\\twoHCP\\\\two_oppsite_HCP\\\\225\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ori\\\\pulse\\\\sqp\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ori\\\\pulse\\\\rampul\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -207,12 +207,12 @@
     "z=data[:,2]\n",
     "plt.xlim(-5, 5)\n",
     "plt.ylim(-5, 5)\n",
-    "plt.title('(a)',loc='left')\n",
+    "# plt.title('(a)',loc='left')\n",
     "ax=plt.tricontourf(x,y,z)\n",
     "#interpolation='spline16'\n",
     "plt.colorbar()\n",
-    "plt.xlabel(\"$\\tR$ (a.u.)\")\n",
-    "plt.ylabel(\"$\\tR$ (a.u.)\")"
+    "plt.xlabel(\"$R$ (a.u.)\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\")"
    ]
   },
   {
@@ -250,8 +250,83 @@
     "ax2.tick_params(axis='y', labelcolor=color)\n",
     "plt.legend(['$X^1\\Sigma^+$--$X^1 \\Sigma ^+$'],loc=0)\n",
     "fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
-    "plt.savefig(dir+\"PotAndDip.jpeg\",bbox_inches = 'tight',dpi=600)\n",
+    "# plt.savefig(dir+\"PotAndDip.jpeg\",bbox_inches = 'tight',dpi=600)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(16/2.54,13/2.54))\n",
+    "\n",
+    "\n",
+    "ax1=plt.axes([0.10,0.55,0.35,0.35])\n",
+    "setlabel(ax1,\"(a)\")\n",
+    "data=np.loadtxt(dir+\"laser.dat\")\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "y3=data[:,3]\n",
+    "y4=data[:,4]\n",
+    "plt.plot(x,y1,'k-')\n",
+    "plt.plot(x,y4,'r:',x,-y4,'r:')#,linewidth=0.5)\n",
+    "plt.xlim(TimeBegin,TimeEnd)\n",
+    "plt.xlabel('Time (fs)')\n",
+    "plt.ylabel(\"Intensity (V/m)\")\n",
+    "sciforyax(ax1)\n",
+    "\n",
+    "ax2=plt.axes([0.55,0.55,0.35,0.35])\n",
+    "setlabel(ax2,\"(b)\")\n",
+    "data=np.loadtxt(dir+\"cos1.dat\")\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "\n",
+    "# fig, ax1 = plt.subplots()\n",
+    "ax1=ax2\n",
+    "color = 'tab:red'\n",
+    "ax1.set_xlabel('Time (fs)')\n",
+    "ax1.set_ylabel('$\\\\langle{\\\\rm  cos} \\\\theta \\\\rangle$', color=color)\n",
+    "ax1.plot(x, y1, color=color)\n",
+    "ax1.tick_params(axis='y', labelcolor=color)\n",
+    "plt.xlim(TimeBegin, TimeEnd)\n",
+    "ax2 = ax1.twinx()  # instantiate a second axes that shares the same x-axis\n",
+    "\n",
+    "color = 'tab:blue'\n",
+    "ax2.set_ylabel('$\\\\langle{\\\\rm cos^2} \\\\theta \\\\rangle$', color=color)  # we already handled the x-label with ax1\n",
+    "ax2.plot(x, y2,'--', color=color)\n",
+    "ax2.tick_params(axis='y', labelcolor=color)\n",
+    "fig.tight_layout() \n",
+    "\n",
+    "ax3=plt.axes([0.1,0.1,0.35,0.35])\n",
+    "setlabel(ax3,\"(c)\")\n",
+    "data=np.loadtxt(dir+\"p_veq0.dat\")\n",
+    "plt.xlim(TimeBegin,TimeEnd)\n",
+    "ax=plt.plot(data[:,0],data[:,1],'k-',data[:,0],data[:,2],'r-',data[:,0],data[:,3],'b-',data[:,0],data[:,4],'k--',data[:,0],data[:,5],'r--',data[:,0],data[:,6],'b--')\n",
+    "plt.ylim(-0.1,1.1)\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"Population\")\n",
+    "plt.legend(['$| 0,0 \\\\rangle$','$| 0,1 \\\\rangle$','$| 0,2 \\\\rangle$','$| 0,3 \\\\rangle$','$| 0,4 \\\\rangle$','$| 0,5 \\\\rangle$'])\n",
+    "\n",
+    "ax4=plt.axes([0.55,0.10,0.44,0.35])\n",
+    "setlabel(ax4,\"(d)\")\n",
+    "# setlabel(ax,\"(a)\")\n",
+    "data =np.loadtxt(dir+\"tap.dat\")\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "levels=np.linspace(z.min(), z.max(), 50)\n",
+    "\n",
+    "plt.xlim(TimeBegin, TimeEnd )\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar(format=cbformat)\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"$\\\\theta$ (Degrees)\")\n",
+    "plt.savefig(dir+\"Total.\"+figureType,dpi=figureDPI)\n"
    ]
   },
   {
@@ -331,6 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(8,6))\n",
     "data=np.loadtxt(dir+\"cos1.dat\")\n",
     "x=data[:,0]\n",
     "y1=data[:,1]\n",
