--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -525,6 +525,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "t=[]\n",
+    "p=[]\n",
+    "tp=[[]for i in range(2)]\n",
+    "for i in range(10,180,5):\n",
+    "    data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\delay\\\\'+str(i)+'\\\\populationofstate.dat')\n",
+    "    x=data[:,0]\n",
+    "    y1=data[:,1]\n",
+    "    y2=data[:,2]\n",
+    "    y3=data[:,3]\n",
+    "    print(i)\n",
+    "    t.append(i)\n",
+    "    tp[0].append(i)\n",
+    "    tp[1].append(max(y3))\n",
+    "    p.append(max(y3))\n",
+    "plt.plot(tp[0],tp[1],'k-',marker='o',markerfacecolor='r',markersize='3')\n",
+    "plt.xlabel('$t_{pa}$ (fs)')\n",
+    "plt.ylabel('Ionization probability')\n",
+    "plt.ylim(-0.17,1.05)\n",
+    "plt.savefig('D:\\\\doc\\\\data\\\\ion\\\\picture\\\\f6pop.'+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "np.savetxt('D:\\\\doc\\\\data\\\\ion\\\\data\\\\PopDelay.dat',tp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*4)))\n",
     "import matplotlib.gridspec as gridspec\n",
     "subdir=\"D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\\"\n",
@@ -1140,7 +1168,7 @@
    "source": [
     "\n",
     "plt.figure(figsize=(8,6))\n",
-    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\fc3\\\\FCrad.dat')\n",
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\fc\\\\fc3\\\\FCrad.dat')\n",
     "\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
@@ -1173,7 +1201,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "plt.figure(figsize=(8,6))\n",
+    "# plt.figure(figsize=(8,6))\n",
     "# plt.subplot(1,2,1)\n",
     "# data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\fc3\\\\FCang.dat')\n",
     "# x=data[:,0]\n",
@@ -1182,7 +1210,7 @@
     "# plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "# plt.colorbar(format=cbformat)\n",
     "# plt.subplot(1,2,2)\n",
-    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\fc3\\\\FCrad.dat')\n",
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\fc\\\\fc3\\\\FCrad.dat')\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,3]\n",
@@ -2112,7 +2140,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2126,7 +2154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
