--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -1,17 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Plot the data of \"ion1testold\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " Import Packets and Set Gengeric Information, parameters"
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\exctoion\\\\t1\\\\'"
    ]
   },
   {
@@ -20,7 +15,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\exctoion\\\\t1\\\\'\n",
     "print('Working directory',dir)\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -193,13 +187,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Get the time points from the data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -271,27 +258,28 @@
     "plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.65,0.70))\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"Population\")\n",
-    "ax=plt.subplot(1,2,2)\n",
-    "setlabel(ax,\"(b)\")\n",
-    "data =np.loadtxt(dir+\"timeenergyspctra.dat\")\n",
-    "#DataAng=scipy.ndimage.zoom(DataAng,1)\n",
-    "#plt.style.use('_mpl-gallery-nogrid')\n",
-    "l=np.argmax(data[:,2])\n",
-    "x=data[l-10:l+90,1]\n",
-    "print(l)\n",
-    "y=data[l-10:l+90,2]\n",
-    "x1=np.arange(min(x),max(x),(max(x)-min(x))/200)\n",
-    "from scipy import interpolate\n",
-    "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
-    "# plt.xlim(-5, 5)\n",
-    "#plt.ylim(-0.009, 0.1)\n",
-    "plt.plot(x1,y1,'k')\n",
-    "sciforyax(ax)\n",
-    "plt.text(0.4*(max(x)-min(x)),0.8*(max(y)-min(y)),'(1+1)-REMPI')\n",
-    "plt.text(0.5*(max(x)-min(x)),0.2*(max(y)-min(y)),'(1+2)-REMPI')\n",
-    "#interpolation='spline16'\n",
-    "plt.xlabel(\"Energy (eV)\")\n",
-    "plt.ylabel(\"Intensity (arb.units)\")\n",
+    "if fee(dir+\"timeenergyspctra.dat\"):\n",
+    "    ax=plt.subplot(1,2,2)\n",
+    "    setlabel(ax,\"(b)\")\n",
+    "    data =np.loadtxt(dir+\"timeenergyspctra.dat\")\n",
+    "    #DataAng=scipy.ndimage.zoom(DataAng,1)\n",
+    "    #plt.style.use('_mpl-gallery-nogrid')\n",
+    "    l=np.argmax(data[:,2])\n",
+    "    x=data[l-10:l+90,1]\n",
+    "    print(l)\n",
+    "    y=data[l-10:l+90,2]\n",
+    "    x1=np.arange(min(x),max(x),(max(x)-min(x))/200)\n",
+    "    from scipy import interpolate\n",
+    "    y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
+    "    # plt.xlim(-5, 5)\n",
+    "    #plt.ylim(-0.009, 0.1)\n",
+    "    plt.plot(x1,y1,'k')\n",
+    "    sciforyax(ax)\n",
+    "    plt.text(0.4*(max(x)-min(x)),0.8*(max(y)-min(y)),'(1+1)-REMPI')\n",
+    "    plt.text(0.5*(max(x)-min(x)),0.2*(max(y)-min(y)),'(1+2)-REMPI')\n",
+    "    #interpolation='spline16'\n",
+    "    plt.xlabel(\"Energy (eV)\")\n",
+    "    plt.ylabel(\"Intensity (arb.units)\")\n",
     "plt.subplots_adjust(left=0.125,\n",
     "                    bottom=0.1, \n",
     "                    right=0.9, \n",
@@ -308,7 +296,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "file=dir+'Laser.dat'\n",
     "if fee(file):\n",
     "    plt.figure(figsize=((8*2/2.54),(6.5*2/2.54)))\n",
@@ -353,19 +340,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plot the Potential energy and dipole moment"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "#pot\n",
     "plt.figure(figsize=((8*2/2.54),(6.5/2.54)))\n",
     "ax=plt.subplot(1,2,1)\n",
     "\n",
@@ -411,6 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Electrical field\n",
     "import matplotlib.ticker as mtick\n",
     "plt.figure(figsize=(cm2inch(8*3),cm2inch(6.5)))\n",
     "ax=plt.subplot(1,3,1)\n",
@@ -462,14 +443,7 @@
     "sciforyax(ax)\n",
     "plt.savefig(dir+\"LaserTimFreDis1.\"+figureType,dpi=figureDPI)\n",
     "# os.startfile(dir)\n",
-    "os.startfile(dir+\"LaserTimFreDis1.\"+figureType)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plot evolution of angle-resolved wave packets"
+    "# os.startfile(dir+\"LaserTimFreDis1.\"+figureType)"
    ]
   },
   {
@@ -478,7 +452,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "file=dir+'vgr_ang.dat'\n",
     "if fee(file):\n",
     "    import matplotlib.ticker as ticker\n",
@@ -603,19 +576,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plot evolution of internuclear distance-resolved wave packages"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "if fee(dir+\"vgr_rad.dat\"): \n",
     "    plt.figure(figsize=((16/2.54),(13/2.54)))\n",
     "    import matplotlib.ticker as ticker    \n",
@@ -760,6 +725,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#excradwave\n",
     "intDir=dir\n",
     "if fee(intDir+\"excradwave.dat\"):\n",
     "    fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*2)))\n",
@@ -865,19 +831,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plot orientation and alignment of the electronic states"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "#timeenergyspctra\n",
     "if fee(dir+\"timeenergyspctra.dat\"):\n",
     "    plt.figure(figsize=(8/2.54,6.8/2.54))\n",
     "    ax = plt.gca()\n",
@@ -938,6 +897,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#timeenergyspctra\n",
     "plt.figure(figsize=(16/2.54,6.5/2.54))\n",
     "\n",
     "ax=plt.subplot(1,2,1)\n",
@@ -1146,11 +1106,6 @@
     "    for i in range(1,nx):\n",
     "        for j in range(1,ny):\n",
     "            zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
-    "    print('nx= ',nx,' ny= ',ny)\n",
-    "    print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
-    "    print('x[50]',x[50])\n",
-    "    print(x[0])\n",
-    "    print(zMesh)\n",
     "    xMesh=np.linspace(min(x),max(x),nx)\n",
     "    yMesh=np.linspace(min(y),max(y),ny)\n",
     "    #xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
@@ -1178,11 +1133,6 @@
     "    for i in range(1,nx):\n",
     "        for j in range(1,ny):\n",
     "            zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
-    "    # print('nx= ',nx,' ny= ',ny)\n",
-    "    # print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
-    "    # print('x[50]',x[50])\n",
-    "    # print(x[0])\n",
-    "    # print(zMesh)\n",
     "    xMesh=np.linspace(min(x),max(x),nx)\n",
     "    yMesh=np.linspace(min(y),max(y),ny)\n",
     "    #xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
@@ -1243,6 +1193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#eneTRJV\n",
     "plt.figure(tight_layout=True,figsize=((8*2/2.54),(6.5*2/2.54)))\n",
     "ax1=plt.axes([0.10,0.55,0.35,0.35])\n",
     "setlabel(ax1,'(a)')\n",
@@ -1332,7 +1283,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "data1=np.loadtxt(dir+'eneTRJVgro.dat')\n",
     "data2=np.loadtxt(dir+'eneTRJVexc.dat')\n",
     "data3=np.loadtxt(dir+'eneTRJVion.dat')\n",
@@ -1361,6 +1311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#kneg\n",
     "plt.figure(figsize=(24/2.54,19.5/2.54))\n",
     "intDir=dir\n",
     "outDir=dir\n",
@@ -1422,6 +1373,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#ktot\n",
     "intDir=dir\n",
     "fig = plt.figure(constrained_layout=True)\n",
     "plt.figure(figsize=(16/2.54,13/2.54))\n",
@@ -1511,13 +1463,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "#plt.grid(False)\n",
-    "\n",
+    "#TimFreDis1\n",
     "plt.figure(figsize=(24/2.54,18/2.54))\n",
-    "\n",
     "if fee(dir+\"TimFreDis1.dat\"):\n",
     "    plt.subplot(3,3,1)\n",
     "    data=np.loadtxt(dir+\"Laser.dat\")\n",
@@ -1709,12 +1656,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scipy.ndimage\n",
-    "plt.figure(figsize=(8/2.54,6.8/2.54))\n",
     "if os.path.exists(dir+\"wave2d.dat\"):\n",
     "    DataAng =np.loadtxt(dir+\"wave2d.dat\")\n",
     "else:   \n",
     "    DataAng =np.loadtxt(dir+\"InitialWavePacket.dat\")\n",
+    "import scipy.ndimage\n",
+    "plt.figure(figsize=(8/2.54,6.8/2.54))\n",
     "#DataAng=scipy.ndimage.zoom(DataAng,1)\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
     "x=DataAng[:,0]\n",
@@ -2069,8 +2016,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " \n",
-    "\n",
     "fileList =os.listdir(dir+\"p_vgr_vj\\\\\")\n",
     "# print(fileList)\n",
     "image_list=list()\n",
@@ -2172,7 +2117,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "gif_name = \"Wave.gif\"\n",
     "fileList =os.listdir(dir+\"wave\\\\\")\n",
     "print(fileList)\n",
@@ -2198,7 +2142,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "fileList =os.listdir(dir+\"PAD\\\\\")\n",
     "print(fileList)\n",
     "dat_list=list()\n",
@@ -2280,12 +2223,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5 (main, Jun 18 2022, 01:16:30)  [GCC 12.1.0 64 bit (AMD64)]"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8661274a7b6276f1ed59dd55bd5818128dd4145d06aedc375b0040f918ce3ecd"
+    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
    }
   }
  },
