--- a/Python/LAMAO.ipynb
+++ b/Python/LAMAO.ipynb
@@ -6,55 +6,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print('Working directory',dir)\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "from matplotlib.ticker import MultipleLocator\n",
     "import os\n",
+    "from matplotlib import ticker\n",
     "plt.rcParams['ytick.right']  =plt.rcParams['xtick.top'] =True\n",
     "xminorLocator=MultipleLocator(2)\n",
-    "#plt.rcParams['set_minor_locator']=xminorLocator\n",
-    "plt.rcParams.update({\n",
-    "    \"text.usetex\": True,\n",
-    "    \"font.family\": \"sans-serif\",\n",
-    "    \"font.sans-serif\": [\"Time New Rroman\"]})\n",
-    "# for Palatino and other serif fonts use:\n",
-    "plt.rcParams.update({\n",
-    "    \"text.usetex\": True,\n",
-    "    \"font.family\": \"serif\",\n",
-    "    #\"font.serif\": [\"Palatino\"],\n",
-    "    \"font.serif\": [\"Time New Roman\"], \n",
-    "})\n",
-    "# It's also possible to use the reduced notation by directly setting font.family:\n",
-    "plt.rcParams.update({\n",
-    "  \"text.usetex\": True,\n",
-    "  \"font.family\": \"Time New Roman\",\n",
-    "  \"font.size\": 8,\n",
-    "})\n",
     "\n",
-    "def cm_to_inch(value):\n",
+    "def cm2inch(value):\n",
     "    return value/2.54\n",
     "\n",
-    "plt.rcParams['figure.figsize'] = (cm_to_inch(8), cm_to_inch(6.5))\n",
-    "#plt.rcParams['figure.figsize'] =(4,3)#(3.5,2.5)\n",
+    "plt.rcParams['figure.figsize'] = (cm2inch(8), cm2inch(6.5))\n",
     "plt.rcParams['lines.linewidth'] = 1\n",
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
+    "plt.rcParams['xtick.labelsize'] = 6\n",
+    "plt.rcParams['ytick.labelsize'] = 6\n",
+    "plt.rcParams['legend.fontsize'] =6\n",
+    "\n",
+    "from matplotlib import rcParams\n",
+    "config = {\n",
+    "    \"text.usetex\": False,\n",
+    "    \"font.family\":'serif',\n",
+    "    # \"font.family\":'stix',\n",
+    "    \"font.size\": 8,\n",
+    "    \"mathtext.fontset\":'stix',\n",
+    "    # \"font.serif\": ['SimSun'],\n",
+    "}\n",
+    "rcParams.update(config)\n",
+    "\n",
+    "\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "import numpy \n",
     "def setlabel(ax, label, loc=2, borderpad=0.6, **kwargs):\n",
     "    legend = ax.get_legend()\n",
     "    if legend:\n",
     "        ax.add_artist(legend)\n",
-    "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label)\n",
+    "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label,fillstyle='full')\n",
+    "    # legend_font = {\n",
+    "    # 'family': 'Times New Roman',\n",
+    "    # 'style':'normal',\n",
+    "    # 'size':10,\n",
+    "    # 'weight': \"bold\",\n",
+    "    # }\n",
     "    label_legend = ax.legend(handles=[line],\n",
-    "                             loc=[-0.15,1.001],\n",
-    "                             handlelength=0,\n",
-    "                             handleheight=0,\n",
-    "                             handletextpad=0,\n",
-    "                             borderaxespad=0,\n",
+    "                             loc=[0.8,0.8],\n",
+    "                             handlelength=0.0,\n",
+    "                             handleheight=0.0,\n",
+    "                             handletextpad=0.0,\n",
+    "                             borderaxespad=0.0,\n",
     "                             borderpad=borderpad,\n",
     "                             frameon=False,\n",
+    "                             shadow=True,\n",
+    "                             facecolor='gray',\n",
+    "                             prop={'weight':'bold','size':8},\n",
     "                             **kwargs)\n",
     "    label_legend.remove()\n",
     "    ax.add_artist(label_legend)\n",
@@ -72,14 +80,68 @@
     "                             borderaxespad=0,\n",
     "                             borderpad=borderpad,\n",
     "                             frameon=False,\n",
+    "                             shadow=True,\n",
+    "                             facecolor='gray',\n",
+    "                             prop={'weight':'bold','size':8},\n",
     "                             **kwargs)\n",
     "    label_legend.remove()\n",
     "    ax.add_artist(label_legend)\n",
     "    line.remove()\n",
+    "def sciforyax(ax):\n",
+    "    formatter=ticker.ScalarFormatter(useMathText=True)\n",
+    "    formatter.set_scientific(True)\n",
+    "    formatter.set_powerlimits((0,0))\n",
+    "    ax.yaxis.set_major_formatter(formatter)\n",
+    "def sciforxax(ax):\n",
+    "    formatter=ticker.ScalarFormatter(useMathText=True)\n",
+    "    formatter.set_scientific(True)\n",
+    "    formatter.set_powerlimits((0,0))\n",
+    "    ax.xaxis.set_major_formatter(formatter)\n",
+    "cbformat=ticker.ScalarFormatter(useMathText=True,useOffset=True)\n",
+    "cbformat.set_powerlimits((-0,0))\n",
+    "cbformat.format=\"%.2f\"\n",
+    "\n",
+    "import matplotlib.ticker\n",
+    "class OOMFormatter(matplotlib.ticker.ScalarFormatter):\n",
+    "    def __init__(self, order=0, fformat=\"%.3f\", offset=True, mathText=True):\n",
+    "        self.oom = order\n",
+    "        self.fformat = fformat\n",
+    "        matplotlib.ticker.ScalarFormatter.__init__(self,useOffset=offset,useMathText=mathText)\n",
+    "    def _set_order_of_magnitude(self):\n",
+    "        self.orderOfMagnitude = self.oom\n",
+    "    def _set_format(self, vmin=None, vmax=None):\n",
+    "        self.format = self.fformat\n",
+    "        if self._useMathText:\n",
+    "             self.format = r'$\\mathdefault{%s}$' % self.format\n",
+    "def fee(d):\n",
+    "    import os\n",
+    "    if (os.path.exists(d)):\n",
+    "        # print(\"The file exists. \")\n",
+    "        sz= os.path.getsize(d)\n",
+    "        if not sz:\n",
+    "            print(d,\" is empty!\")\n",
+    "            return False\n",
+    "        else: \n",
+    "            print(\"Size of \",d,\" is \", sz/1024,'KB' )\n",
+    "            return True\n",
+    "    else:\n",
+    "        print(d, \" is not exists! \")\n",
+    "        return  False \n",
+    "        \n",
+    "import  imageio\n",
+    "import os\n",
+    "def compose_gif(image_list,gif_name,myduration):\n",
+    "    frames=[]\n",
+    "    for image_name in image_list:\n",
+    "        frames.append(imageio.imread(image_name))\n",
+    "    imageio.mimsave(gif_name,frames,'GIF',duration=myduration)\n",
+    "    return\n",
+    "\n",
+    "\n",
     "levels=100\n",
     "figureDPI=1200\n",
-    "figureType=\".jpeg\"\n",
-    "timeUnit=\"ps\""
+    "figureType=\"jpeg\"\n",
+    "timeUnit=\"fs\"\n"
    ]
   },
   {
@@ -88,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\dataofpro\\\\frequency\\\\09150116\\\\'\n",
+    "dir='D:\\\\dataofpro\\\\test\\\\10311736\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.txt\",encoding=\"utf-8\")\n",
@@ -138,7 +200,7 @@
     "v=data[:,1]\n",
     "plt.plot(t,v,'k-')\n",
     "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel('$\\\\langle \\\\rm{cos} \\\\theta \\\\rangle _{Zz}$')\n",
+    "plt.ylabel('$\\\\langle \\\\mathrm{cos} \\\\theta \\\\rangle _{Zz}$')\n",
     "plt.savefig(dir+'cos1Zz'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
     "plt.show()"
    ]
@@ -154,7 +216,7 @@
     "v=data[:,1]\n",
     "plt.plot(t,v,'k-')\n",
     "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel('$\\\\langle \\\\rm{cos} \\\\theta^2 \\\\rangle _{Zz}$')\n",
+    "plt.ylabel('$\\\\langle \\\\mathrm{cos} ^2 \\\\theta\\\\rangle _{Zz}$')\n",
     "plt.savefig(dir+'cos2Zz'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
     "plt.show()"
    ]
@@ -174,12 +236,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data=np.loadtxt(dir+'js.dat')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8*2/2.54,13/2.54))\n",
+    "ax=plt.subplot(2,2,1)\n",
+    "setlabel(ax,'(a)')\n",
+    "data=np.loadtxt(dir+'cos1Zz.dat')\n",
+    "t=data[:,0]\n",
+    "v=data[:,1]\n",
+    "plt.plot(t,v,'k-')\n",
+    "plt.xlabel('Time ('+timeUnit+')')\n",
+    "plt.ylabel('$\\\\langle \\\\mathrm{cos} \\\\theta \\\\rangle _{Zz}$')\n",
+    "ax=plt.subplot(2,2,2)\n",
+    "setlabel(ax,'(b)')\n",
+    "data=np.loadtxt(dir+'cos2Zz.dat')\n",
+    "t=data[:,0]\n",
+    "v=data[:,1]\n",
+    "plt.plot(t,v,'k-')\n",
+    "plt.xlabel('Time ('+timeUnit+')')\n",
+    "plt.ylabel('$\\\\langle \\\\mathrm{cos}^2 \\\\theta \\\\rangle _{Zz}$')\n",
+    "ax=plt.subplot(2,2,3)\n",
+    "setlabel(ax,'(c)')\n",
+    "data=np.loadtxt(dir+'cos2Xx.dat')\n",
+    "t=data[:,0]\n",
+    "v=data[:,1]\n",
+    "plt.plot(t,v,'k-')\n",
+    "plt.xlabel('Time ('+timeUnit+')')\n",
+    "plt.ylabel('$\\\\langle \\\\mathrm{cos} ^2\\\\theta \\\\rangle _{Zz}$')\n",
+    "ax=plt.subplot(2,2,4)\n",
+    "setlabel(ax,'(d)')\n",
+    "data=np.loadtxt(dir+'cos2Xx.dat')\n",
+    "t=data[:,0]\n",
+    "v=data[:,1]\n",
+    "plt.plot(t,v,'k-')\n",
+    "plt.xlabel('Time ('+timeUnit+')')\n",
+    "plt.ylabel('$\\\\langle \\\\mathrm{cos} ^2\\\\theta \\\\rangle _{Zz}$')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data=np.loadtxt(dir+'cos2Yy.dat')\n",
     "t=data[:,0]\n",
     "v=data[:,1]\n",
     "plt.plot(t,v,'k-')\n",
     "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel('$\\\\langle \\\\rm{cos} \\\\theta ^2\\\\rangle _{Zz}$')\n",
+    "plt.ylabel('$\\\\langle \\\\mathrm{cos}^2 \\\\theta \\\\rangle _{Zz}$')\n",
     "plt.savefig(dir+'cos2Yy'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
     "plt.show()"
    ]
@@ -195,7 +311,7 @@
     "v=data[:,1]\n",
     "plt.plot(t,v,'k-')\n",
     "plt.xlabel('Time ('+timeUnit+')')\n",
-    "plt.ylabel('$\\\\langle \\\\rm{cos} \\\\theta ^2\\\\rangle _{Zz}$')\n",
+    "plt.ylabel('$\\\\langle \\\\mathrm{cos}^2 \\\\theta \\\\rangle _{Zz}$')\n",
     "plt.savefig(dir+'cos2Xx'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
     "plt.show()"
    ]
@@ -211,7 +327,7 @@
     "# v=data[:,1]\n",
     "# plt.plot(t,v,'k-')\n",
     "# plt.xlabel('Time ('+timeUnit+')')\n",
-    "# plt.ylabel('$\\\\langle \\\\rm{cos} \\\\theta \\\\rangle _{Zz}$')\n",
+    "# plt.ylabel('$\\\\langle \\\\mathrm{cos} \\\\theta \\\\rangle _{Zz}$')\n",
     "# plt.savefig(dir+'cos1Yy'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
     "# plt.show()"
    ]
@@ -227,7 +343,7 @@
     "# v=data[:,1]\n",
     "# plt.plot(t,v,'k-')\n",
     "# plt.xlabel('Time ('+timeUnit+')')\n",
-    "# plt.ylabel('$\\\\langle \\\\rm{cos} \\\\theta \\\\rangle _{Zz}$')\n",
+    "# plt.ylabel('$\\\\langle \\\\mathrm{cos} \\\\theta \\\\rangle _{Zz}$')\n",
     "# plt.savefig(dir+'cos1Xx'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
     "# plt.show()"
    ]
