--- a/Python/mplot.ipynb
+++ b/Python/mplot.ipynb
@@ -122,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir=\"D:\\\\doc\\\\data\\\\matrix\\\\t1\\\\\"\n",
+    "dir=\"D:\\\\dataofmatrix\\\\\"\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "import os\n",
@@ -138,10 +138,12 @@
     "data=np.loadtxt(dir+\"pulse.dat\")\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
+    "ax=plt.gca()\n",
     "plt.plot(x,y)\n",
     "# plt.xlim(0,5)\n",
     "plt.xlabel(\"Time (ps)\")\n",
     "plt.ylabel(\"Instensity (V/m)\")\n",
+    "sciforyax(ax)\n",
     "plt.savefig(dir+\"pulse.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
@@ -196,11 +198,6 @@
     "for i in range(1,nx):\n",
     "    for j in range(1,ny):\n",
     "        zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
-    "# print('nx= ',nx,' ny= ',ny)\n",
-    "# print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
-    "# print('x[50]',x[50])\n",
-    "# print(x[0])\n",
-    "# print(zMesh)\n",
     "xMesh=np.linspace(min(x),max(x),nx)\n",
     "yMesh=np.linspace(min(y),max(y),ny)\n",
     "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
@@ -208,7 +205,8 @@
     "ax1.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
     "# setlabel(ax1,\"(a)\")\n",
     "# plt.xlim(x[0]/2,max(x)-x[0])\n",
-    "plt.ylim(-0.5,5.5)\n",
+    "plt.ylim(-0.5,11.5)\n",
+    "plt.xlim(min(x),5)\n",
     "plt.xlabel('Time (ps)')\n",
     "plt.ylabel('$J$')\n",
     "plt.colorbar(format=cbformat)\n",
@@ -222,28 +220,45 @@
    "outputs": [],
    "source": [
     "legend=[]\n",
+    "linsty=[\"k-\",\"r--\",\"b-.\",\"g:\",\"k--\"]\n",
+    "colsty=[\"k\",\"r\",\"b\",\"g\"]\n",
     "data1=np.loadtxt(dir+'population_4.dat')\n",
     "data2=np.loadtxt(dir+'population_8.dat')\n",
     "data3=np.loadtxt(dir+'population_12.dat')\n",
     "plt.figure(figsize=(cm2inch(8*3),cm2inch(6.5)))\n",
     "ax=plt.subplot(1,3,1)\n",
     "t=data1[:,0] \n",
+    "n=0\n",
     "for i in range(0,data1.shape[1]-1):\n",
-    "    plt.plot(t,data1[:,i+1])\n",
+    "    while n == len(linsty):\n",
+    "        n=n-len(linsty)\n",
+    "    plt.plot(t,data1[:,i+1],linsty[n])\n",
+    "    n=n+1\n",
+    "    \n",
     "    legend.append(\"$J=$\"+str(i))\n",
-    "plt.legend(legend)\n",
+    "plt.legend(legend,ncol=3)\n",
+    "\n",
     "legend=[]\n",
+    "n=0\n",
     "ax=plt.subplot(1,3,2)\n",
     "for i in range(0,data2.shape[1]-1):\n",
-    "    plt.plot(t,data2[:,i+1])\n",
+    "    while n == len(linsty):\n",
+    "        n=n-len(linsty)\n",
+    "    plt.plot(t,data2[:,i+1],linsty[n])\n",
+    "    n=n+1\n",
     "    legend.append(\"$J=$\"+str(i+5))\n",
     "ax.legend(legend)\n",
+    "\n",
     "legend=[]\n",
     "ax=plt.subplot(1,3,3)\n",
     "for i in range(0,data3.shape[1]-1):\n",
-    "    plt.plot(t,data3[:,i+1])\n",
+    "    while n == len(linsty):\n",
+    "        n=n-len(linsty)\n",
+    "    plt.plot(t,data3[:,i+1],linsty[n])\n",
+    "    n=n+1\n",
     "    legend.append(\"$J=$\"+str(i+9))\n",
-    "ax.legend(legend)"
+    "ax.legend(legend)\n",
+    "plt.savefig(dir+\"pop_js.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
   {
