--- a/Python/oriplot.ipynb
+++ b/Python/oriplot.ipynb
@@ -122,18 +122,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# datanew=np.loadtxt('C:\\\\Users\\\\DELL\\\\OneDrive - mail.dlut.edu.cn\\\\program\\\\origin program for orientation\\originoforient\\\\LiHGroundState.txt')\n",
-    "# dataold=np.loadtxt('C:\\\\Users\\\\DELL\\\\OneDrive - mail.dlut.edu.cn\\\\program\\\\origin program for orientation\\originoforient\\\\pesco.txt')\n",
-    "# x1=datanew[:,0]\n",
-    "# y1=datanew[:,1]\n",
-    "# x2=dataold[:,0]\n",
-    "# y2=dataold[:,1]\n",
-    "# plt.plot(x1,y1,x2,y2)\n",
-    "# plt.xlim(min(x1),10.0)\n",
-    "# plt.ylim(min(y1),-7.9)\n",
-    "# plt.savefig('D:\\\\LiHGroundState.jpeg',dpi=1200)\n",
-    "# os.startfile('D:\\\\LiHGroundState.jpeg')\n",
-    "\n"
+    "dir='D:\\\\doc\\\\data\\\\ori\\\\pulse\\\\sqp\\\\'\n",
+    "dir='D:\\\\dataofpro\\\\'"
    ]
   },
   {
@@ -142,11 +132,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dir='D:\\\\doc\\\\data\\\\ori\\\\test2\\\\'\n",
-    "dir='D:\\\\dataofpro\\\\'\n",
-    "# dir=\"F:\\\\doc\\\\ori1\\\\oneHCP\\\\wave\\\\ori1\\\\\"\n",
-    "# dir='F:\\\\doc\\\\ori1\\\\twoHCP\\\\two_oppsite_HCP\\\\225\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ori\\\\pulse\\\\rampul\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -158,7 +143,7 @@
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
     "print(f.read())\n",
     "import os\n",
-    "os.startfile(dir)"
+    "# os.startfile(dir)"
    ]
   },
   {
@@ -189,8 +174,7 @@
     "    else:\n",
     "        print('Input 1 or 0 to choose. '+str(i+1)+'/3')\n",
     "        \n",
-    "print('Begin time= ' + str(TimeBegin)+ ' fs')\n",
-    "print('End time= ' + str(TimeEnd)+ ' fs')"
+    "print('Begin time= ' + str(TimeBegin)+ ' fs','End time= ' + str(TimeEnd)+ ' fs')"
    ]
   },
   {
@@ -212,7 +196,9 @@
     "#interpolation='spline16'\n",
     "plt.colorbar()\n",
     "plt.xlabel(\"$R$ (a.u.)\")\n",
-    "plt.ylabel(\"$R$ (a.u.)\")"
+    "plt.ylabel(\"$R$ (a.u.)\")\n",
+    "plt.show()\n",
+    "plt.close()"
    ]
   },
   {
@@ -228,7 +214,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "###plot potential energy\n",
     "data=np.loadtxt(dir+\"pot.dat\")\n",
     "x=data[:,0]\n",
     "y1=data[:,1]\n",
@@ -261,8 +246,6 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(16/2.54,13/2.54))\n",
-    "\n",
-    "\n",
     "ax1=plt.axes([0.10,0.55,0.35,0.35])\n",
     "setlabel(ax1,\"(a)\")\n",
     "data=np.loadtxt(dir+\"laser.dat\")\n",
@@ -319,8 +302,6 @@
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
-    "levels=np.linspace(z.min(), z.max(), 50)\n",
-    "\n",
     "plt.xlim(TimeBegin, TimeEnd )\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar(format=cbformat)\n",
@@ -335,7 +316,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(8,6))\n",
     "data=np.loadtxt(dir+\"laser.dat\")\n",
     "x=data[:,0]\n",
     "y1=data[:,1]\n",
@@ -406,6 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#cos\n",
     "plt.figure(figsize=(8,6))\n",
     "data=np.loadtxt(dir+\"cos1.dat\")\n",
     "x=data[:,0]\n",
@@ -439,6 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Time Angular Distribution\n",
     "plt.figure(figsize=(8*2/2.54,6.5/2.54))\n",
     "ax=plt.subplot(1,2,1)\n",
     "# setlabel(ax,\"(a)\")\n",
